wordpressdeploy.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: wordpress-deployment

spec:
  replicas: 3
  template:
    metadata:
      labels:
        component: ihapp
    spec:
      containers:
        - name: ihapp
          image: wordpress
          ports:
            - containerPort: 80
  selector:
    matchLabels:
      component: ihapp
