loadbalancer.yaml
apiVersion: v1
kind: Service

metadata:
  name: web-service

spec: 
  selector: 
    component: ihapp
  
  type: LoadBalancer
  ports:
   - port: 5000
     targetPort: 80
