mysqlservice.yaml
apiVersion: v1
kind: Service

metadata:
  name: ihdbserver

spec: 
  selector: 
    component: ihdbserver
  
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
