nodeport.yaml
apiVersion: v1
kind: Service

metadata:
  name: web-service

spec: 
  selector: 
    component: ihapp
  
  type: NodePort
  ports:
   - nodePort: 30000
     port: 80
     targetPort: 80
