web-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: web-service

spec: 
  selector: 
    component: ihapp
  
  type: ClusterIP
  ports:
   - port: 5000
     targetPort: 8080
